--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -172,9 +172,7 @@
 	right: 1.5rem;
 	overflow: visible;
 
-	@media (min-width: $md2) {
-		display: none;
-	}
+
 
 	// .socials-widget__btn
 	&__btn {
